@@ -284,7 +284,7 @@ public class SunApplicationProxy implements SunApplication, RootInterfaceImpl {
     }  
 
     public void setProxyVersion(java.lang.String value) {
-        if ((version==null && value!=null) || !version.equals(value)) {
+        if ((version==null && value!=null) || (version != null && !version.equals(value))) {
             PropertyChangeEvent evt = new PropertyChangeEvent(
                     this, PROPERTY_VERSION, version, value); 
             version=value;
@@ -401,7 +401,7 @@ public class SunApplicationProxy implements SunApplication, RootInterfaceImpl {
     public void setStatus(int value) {
         if (ddStatus!=value) {
             PropertyChangeEvent evt = new PropertyChangeEvent(
-                    this, PROPERTY_STATUS, new Integer(ddStatus), new Integer(value));
+                    this, PROPERTY_STATUS, Integer.valueOf(ddStatus), Integer.valueOf(value));
             ddStatus=value;
             for (int i=0;i<listeners.size();i++) {
                 listeners.get(i).propertyChange(evt);
